syntax = "proto3";
option go_package = "github.com/kdudkov/goatak/cot/v1";

import "cotevent.proto";
import "takcontrol.proto";

// Top level message sent for TAK Messaging Protocol Version 1.
message TakMessage {
    // Optional - if omitted, continue using last reported control
    // information
    TakControl takControl = 1;

    // Optional - if omitted, no event data in this message
    CotEvent cotEvent = 2;
}

